--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ body, html {
 <!-- Container (About Section) -->
 <div class="w3-content w3-container w3-padding-64" id="about">
   <h3 class="w3-center">How to use the Predictor</h3>
-  <p class="w3-center"><em>    <a href="/prediction" class="w3-bar-item w3-button w3-hide-small"></i> Go to prediction page</a></em></p>
+  <p class="w3-center"><em>    <a href="/templates/prediction" class="w3-bar-item w3-button w3-hide-small"></i> Go to prediction page</a></em></p>
   <p>Welcome to news article prediction. Click on above link and you will land on prediction page, there enter the URL of the article of which you want to predict the category, then click on "Get Category" button and voila!! you will taken to the page which shows your current predicted category and all the history of articles which you/others predict.  </p>
   
 </div>
