changed post url for form

--- a/prediction.html
+++ b/prediction.html
@@ -61,7 +61,7 @@
     </style>
   </head>
   <body>
-    <form action="{{ url_for('prediction') }}" method="post">
+    <form action="/prediction" method="post">
       <h1>ARTICLE CATEGORY PREDICTOR</h1>
       <div class="formcontainer">
       <hr/>
